--- a/src/main/skin/classic/visualdiffer/fileDiffer.css
+++ b/src/main/skin/classic/visualdiffer/fileDiffer.css
@@ -3,38 +3,42 @@
     font-family: "Sans";
 }
 
-.diffViewerChildren::-moz-tree-cell(deletedLine) {
+.fileTreeChildren::-moz-tree-cell(deletedLine) {
     background-color: #FFF0F0;
 }
 
-.diffViewerChildren::-moz-tree-cell-text(deletedLine) {
+.fileTreeChildren::-moz-tree-cell-text(deletedLine) {
     color: #FF0000;
 }
 
-.diffViewerChildren::-moz-tree-cell-text(changedLine) {
+.fileTreeChildren::-moz-tree-cell-text(changedLine) {
     color: #0000FF;
 }
 
-.diffViewerChildren::-moz-tree-cell(changedLine) {
+.fileTreeChildren::-moz-tree-cell(changedLine) {
     background-color: #F0F0FF;
 }
 
-.diffViewerChildren::-moz-tree-cell(missingLine) {
+.fileTreeChildren::-moz-tree-cell(missingLine) {
     background-color: #C0C0C0;
 }
 
-.diffViewerChildren::-moz-tree-cell-text(missingLine) {
+.fileTreeChildren::-moz-tree-cell-text(missingLine) {
     color: #000000;
 }
 
-.diffViewerChildren::-moz-tree-cell(selected) {
+.fileTreeChildren::-moz-tree-cell(selected) {
     background-color: #CCFFCC;
 }
 
-.diffViewerChildren::-moz-tree-cell(addedLine) {
+.fileTreeChildren::-moz-tree-cell(addedLine) {
     background-color: #FFF0F0;
 }
 
-.diffViewerChildren::-moz-tree-cell-text(addedLine) {
+.fileTreeChildren::-moz-tree-cell-text(addedLine) {
     color: #FF0000;
+}
+
+.fileTreeChildren::-moz-tree-row(selected) {
+  border: 1px dotted #000000;
 }
