fixed - 2919197 Folder diff: Show size also for folders

--- a/src/main/skin/classic/visualdiffer/folderDiffer.css
+++ b/src/main/skin/classic/visualdiffer/folderDiffer.css
@@ -34,6 +34,10 @@
   color: #000;
 }
 
+.folderTreeChildren::-moz-tree-cell-text(subfoldersSize) {
+  color: #AAA;
+}
+
 /* little hack to hide the twisty */
 .folderTreeChildren::-moz-tree-twisty {
   margin-left: -2px;
