fixed - 2922699 File Differ: Selected item foreground color in is ugly

--- a/src/main/skin/classic/visualdiffer/fileDiffer.css
+++ b/src/main/skin/classic/visualdiffer/fileDiffer.css
@@ -39,4 +39,10 @@
   border: 1px dotted #000000;
 }
 
+.fileTreeChildren::-moz-tree-cell-text(sameLine) {
+  color: #000;
+}
 
+.fileTreeChildren::-moz-tree-cell-text(lineNumber) {
+  color: #000;
+}
